--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 MONGO_PASSWORD=novateach
 MONGO_URI=mongodb+srv://novateach:novateach@cluster0.zxgaq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=NOVATEACH
